--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jose": "^5.9.6",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.12.0",
     "mongoose": "^8.9.2",
     "next": "15.1.0",
     "razorpay": "^2.9.5",
